libcm4all-was (1.12) unstable; urgency=low

  * simple: link with libcm4all-http
  * simple: fix poll bugs after receiving STOP

 --   

libcm4all-was (1.11) unstable; urgency=low

  * debian: fix the build of package libcm4all-was-protocol-dev

 -- Max Kellermann <mk@cm4all.com>  Tue, 13 Jun 2017 08:38:03 -0000

libcm4all-was (1.10) unstable; urgency=low

  * simple: fix double free bug

 -- Max Kellermann <mk@cm4all.com>  Mon, 13 Mar 2017 21:27:06 -0000

libcm4all-was (1.9) unstable; urgency=low

  * simple: fix assertion failure after control send error
  * simple: add _abort()
  * require Debian Jessie or newer

 -- Max Kellermann <mk@cm4all.com>  Mon, 06 Feb 2017 17:05:00 -0000

libcm4all-was (1.8) unstable; urgency=low

  * simple: add _output_begin()
  * simple: flush PREMATURE packets
  * simple: handle STOP even after response is finished

 -- Max Kellermann <mk@cm4all.com>  Wed, 16 Nov 2016 14:46:02 -0000

libcm4all-was (1.7) unstable; urgency=low

  * simple: fix assertion failure due to missing error check
  * simple: fix inverted length check

 -- Max Kellermann <mk@cm4all.com>  Thu, 13 Oct 2016 16:23:18 -0000

libcm4all-was (1.6) unstable; urgency=low

  * simple: convert assertion to runtime check
  * simple: abandon connection after unrecoverable error

 -- Max Kellermann <mk@cm4all.com>  Wed, 05 Oct 2016 12:47:08 -0000

libcm4all-was (1.5) unstable; urgency=low

  * simple: fix bogus EAGAIN from was_simple_read()

 -- Max Kellermann <mk@cm4all.com>  Mon, 09 May 2016 09:49:01 -0000

libcm4all-was (1.4) unstable; urgency=low

  * simple: fix assertion failure after receiving STOP
  * simple: fix assertion failure on large control packet
  * simple: eliminate unnecessary last read on request body
  * simple: poll control channel after partial read

 -- Max Kellermann <mk@cm4all.com>  Wed, 27 Apr 2016 20:16:01 -0000

libcm4all-was (1.3) unstable; urgency=low

  * simple: add _input_remaining()
  * apreq: adapt to libapreq 2.10
