@@ -1,3 +1,0 @@
-usr/include/cm4all/libwas-1/was/apreq.h
-usr/lib/libcm4all-was-apreq.{a,so}
-usr/lib/pkgconfig/libcm4all-was-apreq.pc
