@@ -1,0 +1,3 @@
+usr/include/cm4all/libwas-1/was/simple.h
+usr/lib/x86_64-linux-gnu/libcm4all-was-simple.{a,so}
+usr/lib/x86_64-linux-gnu/pkgconfig/libcm4all-was-simple.pc
