@@ -1,3 +1,0 @@
-usr/include/cm4all/libwas-1/was/simple.h
-usr/lib/libcm4all-was-simple.{a,so}
-usr/lib/pkgconfig/libcm4all-was-simple.pc
