@@ -1,1 +1,0 @@
-usr/lib/libcm4all-was-simple.so.*
