@@ -1,3 +1,0 @@
-usr/include/cm4all/libwas-1/was/{istub,ostub}.h
-usr/lib/libcm4all-was-xios.{a,so}
-usr/lib/pkgconfig/libcm4all-was-xios.pc
