@@ -1,0 +1,1 @@
+usr/lib/x86_64-linux-gnu/libcm4all-was-xios.so.*
