@@ -6,7 +6,7 @@
 
 DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH 2>/dev/null)
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 CFLAGS = -Wall -g
 
@@ -14,25 +14,6 @@ ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
   CFLAGS += -O0
 else
   CFLAGS += -O2
-endif
-
-ifneq ($(DEB_HOST_MULTIARCH),)
-MULTIARCH_CONFIGURE_FLAGS := \
-	--libdir=/usr/lib/$(DEB_HOST_MULTIARCH)
-endif
-
-INSTALL_FILES = \
-	debian/libcm4all-was-simple-dev.install \
-	debian/libcm4all-was-simple1.install \
-	debian/libcm4all-was-apreq-dev.install \
-	debian/libcm4all-was-apreq1.install \
-	debian/libcm4all-was-xios-dev.install \
-	debian/libcm4all-was-xios1.install
-$(INSTALL_FILES): %: %.in
-ifeq ($(DEB_HOST_MULTIARCH),)
-	cp $< $@
-else
-	sed 's,usr/lib,usr/lib/$(DEB_HOST_MULTIARCH),g' $< >$@
 endif
 
 configure: debian/stamp-configure
@@ -51,7 +32,7 @@ debian/stamp-configure:
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--includedir=/usr/include/cm4all/libwas-1 \
-		$(MULTIARCH_CONFIGURE_FLAGS) \
+		--libdir=/usr/lib/$(DEB_HOST_MULTIARCH) \
 		--enable-debug
 
 	@touch $@
@@ -73,7 +54,7 @@ debian/stamp-check:
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f debian/stamp-* $(INSTALL_FILES)
+	rm -f debian/stamp-*
 
 	[ ! -f Makefile ] || $(MAKE) distclean
 
@@ -108,7 +89,7 @@ binary-indep: build check install
 	dh_builddeb -i
 
 # Build architecture-dependent files here.
-binary-arch: build check install $(INSTALL_FILES)
+binary-arch: build check install
 	dh_testdir -a
 	dh_testroot -a
 	dh_installdocs -a
