@@ -2,6 +2,7 @@ libcm4all-was (1.12) unstable; urgency=low
 
   * simple: link with libcm4all-http
   * simple: fix poll bugs after receiving STOP
+  * debian: require Multi-Arch (Debian Jessie or newer)
 
  --   
 
